// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Switch Default 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fd-form-group"
  >
    
    
    <div
      class="fd-form-item"
    >
      
        
      <div
        class="fd-form-label"
        id="label1"
      >
        Default (Cozy) Switch
      </div>
      
        
      <label
        class="fd-switch"
      >
        
            
        <span
          class="fd-switch__control"
        >
          
                
          <input
            aria-labelledby="label1"
            class="fd-switch__input"
            id="y21YO3251"
            name=""
            type="checkbox"
            value=""
          />
          
                
          <div
            class="fd-switch__slider"
          >
            
                    
            <div
              class="fd-switch__track"
            >
              
                        
              <span
                class="fd-switch__handle"
                role="presentation"
              />
              
                    
            </div>
            
                
          </div>
          
            
        </span>
        
        
      </label>
      
    
    </div>
    
    
    <div
      class="fd-form-item"
    >
      
        
      <div
        class="fd-form-label"
        id="label2"
      >
        Compact Switch
      </div>
      
        
      <label
        class="fd-switch fd-switch--compact"
      >
        
            
        <span
          class="fd-switch__control"
        >
          
                
          <input
            aria-labelledby="label2"
            class="fd-switch__input"
            id="y21YO3431"
            name=""
            type="checkbox"
            value=""
          />
          
                
          <div
            class="fd-switch__slider"
          >
            
                    
            <div
              class="fd-switch__track"
            >
              
                        
              <span
                class="fd-switch__handle"
                role="presentation"
              />
              
                    
            </div>
            
                
          </div>
          
            
        </span>
        
        
      </label>
      
    
    </div>
    
    
    <div
      class="fd-form-item"
    >
      
        
      <div
        class="fd-form-label"
        id="label7"
      >
        Disabled Switch
      </div>
      
        
      <label
        class="fd-switch is-disabled"
      >
        
            
        <span
          class="fd-switch__control"
        >
          
                
          <input
            aria-labelledby="label7"
            class="fd-switch__input"
            id="y21Y13431"
            name=""
            type="checkbox"
            value=""
          />
          
                
          <div
            class="fd-switch__slider"
          >
            
                    
            <div
              class="fd-switch__track"
            >
              
                        
              <span
                class="fd-switch__handle"
                role="presentation"
              />
              
                    
            </div>
            
                
          </div>
          
            
        </span>
        
        
      </label>
      
    
    </div>
    
    
    <div
      class="fd-form-item"
    >
      
        
      <div
        class="fd-form-label"
        id="label8"
      >
        Disabled switch (compact)
      </div>
      
        
      <label
        class="fd-switch fd-switch--compact is-disabled"
      >
        
            
        <span
          class="fd-switch__control"
        >
          
                
          <input
            aria-labelledby="label8"
            class="fd-switch__input"
            id="y21Y13491"
            name=""
            type="checkbox"
            value=""
          />
          
                
          <div
            class="fd-switch__slider"
          >
            
                    
            <div
              class="fd-switch__track"
            >
              
                        
              <span
                class="fd-switch__handle"
                role="presentation"
              />
              
                    
            </div>
            
                
          </div>
          
            
        </span>
        
        
      </label>
      
    
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Switch Optional text 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fd-form-group"
  >
    
    
    <div
      class="fd-form-item"
    >
      
        
      <div
        class="fd-form-label"
        id="label3"
      >
        With inline text (off)
      </div>
      
        
      <label
        class="fd-switch"
      >
        
            
        <span
          class="fd-switch__text"
        >
          Off
        </span>
        
            
        <span
          class="fd-switch__control"
        >
          
                
          <input
            aria-labelledby="label3"
            class="fd-switch__input"
            id="y21Y677251"
            name=""
            type="checkbox"
            value=""
          />
          
                
          <div
            class="fd-switch__slider"
          >
            
                    
            <div
              class="fd-switch__track"
            >
              
                        
              <span
                class="fd-switch__handle"
                role="presentation"
              />
              
                    
            </div>
            
                
          </div>
          
            
        </span>
        
        
      </label>
      
    
    </div>
    
    
    <div
      class="fd-form-item"
    >
      
        
      <div
        class="fd-form-label"
        id="label4"
      >
        With inline text (on)
      </div>
      
        
      <label
        class="fd-switch"
      >
        
            
        <span
          class="fd-switch__text"
        >
          On
        </span>
        
            
        <span
          class="fd-switch__control"
        >
          
                
          <input
            aria-labelledby="label4"
            checked=""
            class="fd-switch__input"
            id="y21653431"
            name=""
            type="checkbox"
            value=""
          />
          
                
          <div
            class="fd-switch__slider"
          >
            
                    
            <div
              class="fd-switch__track"
            >
              
                        
              <span
                class="fd-switch__handle"
                role="presentation"
              />
              
                    
            </div>
            
                
          </div>
          
            
        </span>
        
        
      </label>
      
    
    </div>
    
    
    <div
      class="fd-form-item"
    >
      
        
      <div
        class="fd-form-label"
        id="label9"
      >
        Disabled with inline text (on)
      </div>
      
        
      <label
        class="fd-switch is-disabled"
      >
        
            
        <span
          class="fd-switch__text"
        >
          On
        </span>
        
            
        <span
          class="fd-switch__control"
        >
          
                
          <input
            aria-labelledby="label9"
            checked=""
            class="fd-switch__input"
            id="y29653431"
            name=""
            type="checkbox"
            value=""
          />
          
                
          <div
            class="fd-switch__slider"
          >
            
                    
            <div
              class="fd-switch__track"
            >
              
                        
              <span
                class="fd-switch__handle"
                role="presentation"
              />
              
                    
            </div>
            
                
          </div>
          
            
        </span>
        
        
      </label>
      
    
    </div>
    

  </div>
</div>
`;

exports[`Storyshots Components/Switch States 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fd-form-group"
  >
    
    
    <div
      class="fd-form-item"
    >
      
        
      <label
        class="fd-form-label"
        id="label5"
      >
        Semantic switch
      </label>
      
        
      <label
        class="fd-switch fd-switch--semantic"
      >
        
            
        <span
          class="fd-switch__control"
        >
          
                
          <input
            aria-labelledby="label5"
            class="fd-switch__input"
            id="y21YO3251"
            name=""
            type="checkbox"
            value=""
          />
          
                
          <div
            class="fd-switch__slider"
          >
            
                    
            <div
              class="fd-switch__track"
            >
              
                        
              <i
                class="fd-switch__icon fd-switch__icon--on sap-icon--accept"
                role="presentation"
              />
              
                        
              <span
                class="fd-switch__handle"
                role="presentation"
              />
              
                        
              <i
                class="fd-switch__icon fd-switch__icon--off sap-icon--decline"
                role="presentation"
              />
              
                    
            </div>
            
                
          </div>
          
            
        </span>
        
        
      </label>
      
    
    </div>
    
    
    <div
      class="fd-form-item"
    >
      
        
      <label
        class="fd-form-label"
        id="label6"
      >
        Semantic switch (compact)
      </label>
      
        
      <label
        class="fd-switch fd-switch--semantic fd-switch--compact"
      >
        
            
        <span
          class="fd-switch__control"
        >
          
                
          <input
            aria-labelledby="label6"
            class="fd-switch__input"
            id="y21YO3431"
            name=""
            type="checkbox"
            value=""
          />
          
                
          <div
            class="fd-switch__slider"
          >
            
                    
            <div
              class="fd-switch__track"
            >
              
                        
              <i
                class="fd-switch__icon fd-switch__icon--on sap-icon--accept"
                role="presentation"
              />
              
                        
              <span
                class="fd-switch__handle"
                role="presentation"
              />
              
                        
              <i
                class="fd-switch__icon fd-switch__icon--off sap-icon--decline"
                role="presentation"
              />
              
                    
            </div>
            
                
          </div>
          
            
        </span>
        
        
      </label>
      
    
    </div>
    

  </div>
</div>
`;
